feat: Database - Playlist Import and Export

--- a/lang/en.json
+++ b/lang/en.json
@@ -128,8 +128,10 @@
     "renameImagesIdToTitleDesc": "Find all game images with the games ID in their filename and rename them to use its title instead",
     "createMissingFolders": "Create Missing Folders",
     "createMissingFoldersDesc": "Find all missing folders in the Flashpoint folder structure and create them",
-    "importLegacyContent": "Import Legacy Content",
-    "importLegacyContentDesc": "Imports Legacy Content - Platform XMLs from 'Data/Platform/'",
+    "importLegacyPlatforms": "Import Legacy Platforms",
+    "importLegacyPlatformsDesc": "Imports Legacy Platforms from `Data/Platforms/` - WARNING: Will overwrite conflicting games",
+    "importLegacyPlaylists": "Import Legacy Playlists",
+    "importLegacyPlaylistsDesc": "Imports Legacy Playlists from `/Data/Playlists`",
     "servicesHeader": "Background Services",
     "servicesMissing": "There are no services.",
     "running": "Running",
@@ -219,6 +221,7 @@
     "editGame": "Edit Game",
     "allGames": "All Games",
     "newPlaylist": "New Playlist",
+    "importPlaylist": "Import Playlist",
     "emptyPlaylist": "Empty Playlist",
     "noGamesFound": "No Games Found!",
     "dropGameOnLeft": "Drop a game on this playlist in the {0} to add it.",
@@ -294,13 +297,19 @@
     "saveDesc": "Save changes made and stop editing",
     "discard": "Discard",
     "discardDesc": "Discard changes made and stop editing",
+    "edit": "Edit",
+    "editDesc": "Edit this playlist",
     "delete": "Delete",
     "deleteDesc": "Delete this playlist",
+    "changeIcon": "Change Playlist Icon",
+    "duplicatePlaylistDesc": "Duplicate Playlist",
+    "exportPlaylistDesc": "Export playlist to a file",
     "areYouSure": "Are you sure?",
     "noTitle": "No Title",
     "titlePlaceholder": "Title...",
     "noAuthor": "No Author",
     "authorPlaceholder": "Author...",
+    "id": "ID",
     "by": "by"
   },
   "misc": {
@@ -321,7 +330,9 @@
     "duplicateMetaOnly": "Duplicate (Meta Only)",
     "duplicateMetaAndImages": "Duplicate (Meta && Images)",
     "exportMetaOnly": "Export (Meta Only)",
-    "exportMetaAndImages": "Export (Meta && Images)"
+    "exportMetaAndImages": "Export (Meta && Images)",
+    "duplicatePlaylist": "Duplicate Playlist",
+    "exportPlaylist": "Export Playlist"
   },
   "dialog": {
     "programNotFound": "Program not found!",
@@ -331,6 +342,9 @@
     "fileNotFound": "File not found!",
     "flashpointPathInvalid": "Flashpoint path invalid!",
     "pathNotFound": "Path not found!",
+    "playlistConflict": "Playlist Conflict",
+    "importedPlaylistAlreadyExists": "Imported playlist already exists! - '{0}'",
+    "mergeOrStaySeperate": "Should they merge into one, or stay as seperate playlists?",
     "selectFileToExportMeta": "Select file to save meta to",
     "selectFolderToExportMetaAndImages": "Select folder to save meta and images to",
     "replaceFilesQuestion": "Replace files?",
@@ -342,6 +356,8 @@
     "selectCurationFolder": "Select Curation Folder(s)",
     "selectCurationArchive": "Select Curation Archive(s)",
     "selectCurationMeta": "Select Curation Meta(s)",
+    "selectPlaylistToImport": "Select Playlist to Import",
+    "selectFileToExportPlaylist": "Select file to save the Playlist to",
     "errorParsingPlatforms": "Error parsing platforms!",
     "errorParsingPlatformsMessage": "{0} Error(s) raised while parsing platform XMLs\nPlease check the logs for details.",
     "dataRequired": "Additional Data Required",
@@ -350,7 +366,10 @@
     "verifyPathSelection": "Future upgrades will also install here. Is this correct?",
     "restartNow": "Restart Now?",
     "restartToApplyUpgrade": "This upgrade will not be applied until you restart.\nDo you wish to do this now?",
-    "areYouSure": "Are you sure?"
+    "areYouSure": "Are you sure?",
+    "cancel": "Cancel",
+    "mergePlaylists": "Merge Playlists",
+    "newPlaylist": "Stay Seperate"
   },
   "libraries": {
     "arcade": "Games",
