feat: Database - Keyset Pagnination
- Playlists now filter and in order

--- a/lang/en.json
+++ b/lang/en.json
@@ -203,6 +203,7 @@
     "noApplicationPath": "No Application Path",
     "launchCommand": "Launch Command",
     "noLaunchCommand": "No Launch Command",
+    "searching": "Searching...",
     "library": "Library",
     "defaultLibrary": "Default Library",
     "thumbnail": "Thumbnail",
