feat: Tag Overhaul
- Tag related DB methods in TagManager
- Tag searches must be exact (case insensitive)
- Tags are now stored in seperate tables

--- a/lang/en.json
+++ b/lang/en.json
@@ -166,6 +166,7 @@
     "noAlternateTitles": "No Alternate Titles",
     "tags": "Tags",
     "noTags": "No Tags",
+    "enterTag": "Enter Tag",
     "series": "Series",
     "noSeries": "No Series",
     "publisher": "Publisher",
