fix: Tag Suggestions and adjusted order by
- Uses unique tag aliases, not perfect

--- a/lang/en.json
+++ b/lang/en.json
@@ -96,7 +96,7 @@
   },
   "filter": {
     "dateAdded": "Date Added",
-    "tags": "Tags",
+    "dateModified": "Date Modified",
     "platform": "Platform",
     "series": "Series",
     "title": "Title",
