refactor: Tag Categories in Redux Store
feat: Tags Page (WIP)

--- a/lang/en.json
+++ b/lang/en.json
@@ -78,6 +78,7 @@
   "app": {
     "home": "Home",
     "browse": "Browse",
+    "tags": "Tags",
     "logs": "Logs",
     "config": "Config",
     "about": "About",
