--- a/lang/en.json
+++ b/lang/en.json
@@ -8,6 +8,8 @@
     "extremeGamesDesc": "Show games with sexual, violent or other content unsuitable for children.",
     "enableEditing": "Enable Editing",
     "enableEditingDesc": "Enable editing of games, additional applications and playlists. Also shows the 'Curate' tab.",
+    "onDemandImages": "On Demand Images",
+    "onDemandImagesDesc": "Download and save missing logos and screenshots as they are needed.",
     "currentLanguage": "Language",
     "currentLanguageDesc": "Which language the launcher will use primarily.",
     "fallbackLanguage": "Fallback Language",
