feat: add meta edit importer/exporter
* Add a component (MetaEditExporter) that is used for selecting which
game properties to include when exporting a meta edit
* Add an option to the context menu for games in the game list/grid
("Export Meta Edit") that opens the meta edit exporter "popup"
* Add a folder ("Flashpoint/Data/MetaEdits") that meta edit files are
exported to and imported from
* Add a developer tool ("Import Meta Edits") that imports all meta edit
files in the meta edits folder

Meta edits are used for making changes to existing games (such as
correcting typos). These used to be written by hand and applied directly
to the XMLs by a separate program. But since the launcher now uses a
database, the tool no longer works and a substitute was needed.

--- a/lang/en.json
+++ b/lang/en.json
@@ -138,6 +138,8 @@
     "importLegacyPlatformsDesc": "Imports Legacy Platforms from `Data/Platforms/` - WARNING: Will overwrite conflicting games",
     "importLegacyPlaylists": "Import Legacy Playlists",
     "importLegacyPlaylistsDesc": "Imports Legacy Playlists from `/Data/Playlists`",
+    "importMetaEdits": "Import Meta Edits",
+    "importMetaEditsDesc": "Imports ALL Meta Edits from `/Data/MetaEdits`",
     "servicesHeader": "Background Services",
     "servicesMissing": "There are no services.",
     "running": "Running",
@@ -351,7 +353,9 @@
     "downloading": "Downloading",
     "extracting": "Extracting",
     "installingFiles": "Installing Files...",
-    "complete": "Complete"
+    "complete": "Complete",
+    "exportMetaEditTitle": "Export Meta Edit",
+    "exportMetaEditDesc": "Select all properties to export:"
   },
   "menu": {
     "viewThumbnailInFolder": "View Thumbnail in Folder",
@@ -361,6 +365,7 @@
     "duplicateMetaAndImages": "Duplicate (Meta && Images)",
     "exportMetaOnly": "Export (Meta Only)",
     "exportMetaAndImages": "Export (Meta && Images)",
+    "exportMetaEdit": "Export Meta Edit",
     "duplicatePlaylist": "Duplicate Playlist",
     "exportPlaylist": "Export Playlist"
   },
