feat: MAD4FP integration
Now uses symlinks for curation content runs

--- a/lang/en.json
+++ b/lang/en.json
@@ -306,6 +306,7 @@
     "deleteCurationDesc": "Delete this curation (Files can not be recovered)",
     "openFolder": "Open Folder",
     "run": "Run",
+    "runWithMAD4FP": "Run with MAD4FP",
     "export": "Export",
     "import": "Import",
     "contentFiles": "Content Files",
