feat: Tag Importer and Exporter

--- a/lang/en.json
+++ b/lang/en.json
@@ -143,6 +143,14 @@
     "importLegacyPlaylistsDesc": "Imports Legacy Playlists from `/Data/Playlists`",
     "importMetaEdits": "Import Meta Edits",
     "importMetaEditsDesc": "Imports ALL Meta Edits from `/Data/MetaEdits`",
+    "fixPrimaryAliases": "Fix Primary Aliases",
+    "fixPrimaryAliasesDesc": "Add a primary alias to any tags that are missing one",
+    "fixCommaTags": "Fix Tags with Commas",
+    "fixCommaTagsDesc": "Splits tags with commas into many tags and applies them to all applicable games",
+    "exportTags": "Export Tags",
+    "exportTagsDesc": "Creates a file full of tags and tag categories that can be used by 'Import Tags'",
+    "importTags": "Import Tags",
+    "importTagsDesc": "Imports Tags from an file created by 'Export Tags'",
     "servicesHeader": "Background Services",
     "servicesMissing": "There are no services.",
     "running": "Running",
