refactor: Simplified playlist collisions options
Playlist merging removed in the meantime

Cleanup on CurateBox unused import. Kept warning me, annoying.

--- a/lang/en.json
+++ b/lang/en.json
@@ -389,8 +389,8 @@
     "flashpointPathInvalid": "Flashpoint path invalid!",
     "pathNotFound": "Path not found!",
     "playlistConflict": "Playlist Conflict",
-    "importedPlaylistAlreadyExists": "Imported playlist already exists! - '{0}'",
-    "mergeOrStaySeperate": "Should they merge into one, or stay as seperate playlists?",
+    "importedPlaylistAlreadyExists": "Imported playlist already exists with same name! - '{0}'",
+    "importPlaylistAs": "Import playlist as",
     "selectFileToExportMeta": "Select file to save meta to",
     "selectFolderToExportMetaAndImages": "Select folder to save meta and images to",
     "replaceFilesQuestion": "Replace files?",
