feat: Symlink curation content toggle
MAD4FP requires it, removed unused strToBool import

--- a/lang/en.json
+++ b/lang/en.json
@@ -284,6 +284,7 @@
     "deleteAll": "Delete All",
     "deleteAllDesc": "Delete all curations that are currently loaded",
     "saveImportedCurations": "Save Imported Curations",
+    "symlinkCurationContent": "Symlink Curation Content Folder (Admin prompts on Windows, Required for MAD4FP)",
     "openCurationsFolder": "Curations Folder",
     "openCurationsFolderDesc": "Open the Curations folder in explorer",
     "openExportsFolder": "Exported Curations",
