--- a/lang/en.json
+++ b/lang/en.json
@@ -7,7 +7,7 @@
     "extremeGames": "Extreme Games",
     "extremeGamesDesc": "Show games with sexual, violent or other content unsuitable for children.",
     "enableEditing": "Enable Editing",
-    "enableEditingDesc": "Enable editing of games, additional applications and playlists. Also shows the 'Curate' tab.",
+    "enableEditingDesc": "Enable editing of games and additional applications. Also shows tabs related to editing.",
     "onDemandImages": "On Demand Images",
     "onDemandImagesDesc": "Download and save missing logos and screenshots as they are needed.",
     "currentLanguage": "Language",
