chore: Update languages for 9.0.0

--- a/lang/es-ES.json
+++ b/lang/es-ES.json
@@ -8,6 +8,8 @@
     "extremeGamesDesc": "Mostrar juegos con contenido sexual, violento o no apto para menores de edad.",
     "enableEditing": "Habilitar la edición",
     "enableEditingDesc": "Habilitar la edición de juegos, aplicaciones adicionales y listas de reproducción. También muestra la pestaña 'Curar'.",
+    "onDemandImages": "Imágenes bajo demanda",
+    "onDemandImagesDesc": "Descarga y guarda logotipos y capturas de pantalla cuando sea necesario.",
     "currentLanguage": "Idioma",
     "currentLanguageDesc": "Qué idioma usará el launcher principalmente.",
     "fallbackLanguage": "Idioma de reserva",
@@ -18,9 +20,6 @@
     "flashpointPath": "Ruta de Flashpoint",
     "flashpointPathDesc": "Ruta de la carpeta Flashpoint (puede ser relativa)",
     "browse": "Navegar",
-    "redirector": "Redirector",
-    "redirectorFiddler": "Fiddler",
-    "redirectorDesc": "Que programa utilizar para redirigir el tráfico de los juegos al servidor local web. Ninguno es usado en Linux.",
     "platforms": "Plataformas",
     "nativePlatforms": "Plataformas nativas",
     "nativePlatformsDesc": "Usar versiones nativas de estas plataformas. (Si no está disponible, utilizará Wine)",
@@ -33,6 +32,10 @@
     "advancedHeader": "Avanzado",
     "showDeveloperTab": "Mostrar la pestaña Desarrollador",
     "showDeveloperTabDesc": "Mostrar la pestaña 'Desarrollador'. Esta es muy probable que sólo sea útil para desarrolladores y curadores.",
+    "server": "Servidor",
+    "serverDesc": "Cual proceso de servidor se ejecutará al iniciar la aplicación.",
+    "metadataServerHost": "Servidor de metadatos anfitrión",
+    "metadataServerHostDesc": "Anfitrión del servidor de metadatos. Utilizado para sincronizar información nueva y actualizada de los juegos a la aplicación.",
     "saveAndRestart": "Guardar y reiniciar"
   },
   "home": {
@@ -52,7 +55,7 @@
     "configInfo": "¿Quieres cambiar algo? Ve a {0}.",
     "config": "Configuración",
     "helpInfo": "¿Necesitas Ayuda? {0}.",
-    "help": "Leer el archivo 'readme'",
+    "help": "Lee el manual",
     "upgradesHeader": "Mejoras",
     "installComplete": "Instalación completada",
     "alreadyInstalled": "Ya instalado",
@@ -65,19 +68,25 @@
     "filterByPlatform": "Filtrar por plataforma",
     "plannedFeatures": "¡Echa un vistazo a nuestras características planificadas!",
     "notesHeader": "Notas",
-    "notes": "No olvides leer el archivo 'readme' si estas teniendo problemas.",
+    "notes": "No olvides leer el manual si estás teniendo problemas.",
     "linuxSupport": "¿Problemas en Linux? {0}",
     "linuxSupportLinkText": "Abrir preguntas frecuentes (FAQ)",
-    "randomPicks": "Selección aleatoria"
+    "randomPicks": "Selección aleatoria",
+    "rerollPicks": "Volver a rodar las selecciones"
   },
   "logs": {
     "filters": "Filtros",
     "copyText": "Copiar texto",
-    "clearLog": "Limpiar el registro"
+    "clearLog": "Limpiar el registro",
+    "copy404Urls": "Copiar las URLs 404",
+    "uploadLog": "Subir registro",
+    "copiedToClipboard": "Copiado al portapapeles"
   },
   "app": {
     "home": "Inicio",
     "browse": "Navegar",
+    "tags": "Etiquetas",
+    "categories": "Categorías",
     "logs": "Registro",
     "config": "Configuración",
     "about": "Acerca de",
@@ -96,7 +105,7 @@
   },
   "filter": {
     "dateAdded": "Fecha de adición",
-    "tags": "Etiquetas",
+    "dateModified": "Fecha de modificación",
     "platform": "Plataforma",
     "series": "Serie",
     "title": "Título",
@@ -128,6 +137,12 @@
     "renameImagesIdToTitleDesc": "Encuentra todas las imágenes de juegos con el ID del juego en su nombre de archivo y los renombra para usar su título en su lugar",
     "createMissingFolders": "Crear carpetas faltantes",
     "createMissingFoldersDesc": "Encuentra todas las carpetas faltantes en la estructura de carpetas de Flashpoint y las crea",
+    "importLegacyPlatforms": "Importar plataformas existentes",
+    "importLegacyPlatformsDesc": "Importa plataformas existentes de 'Data/Platforms' - PRECAUCIÓN: Se sobreescribirá juegos en conflicto",
+    "importLegacyPlaylists": "Importar listas de reproducción existentes",
+    "importLegacyPlaylistsDesc": "Importa listas de reproducción existentes de '/Data/Playlists'",
+    "importMetaEdits": "Importa correcciones de metadatos",
+    "importMetaEditsDesc": "Importa TODAS las correcciones de metadatos de '/Data/MetaEdits'",
     "servicesHeader": "Servicios en segundo plano",
     "servicesMissing": "No hay servicios.",
     "running": "Corriendo",
@@ -152,7 +167,8 @@
     "version": "Versión",
     "license": "Licencia",
     "licenseInfo": "MIT (Leer el archivo llamado 'LICENSE' para más información)",
-    "creditsHeader": "Créditos"
+    "creditsHeader": "Créditos",
+    "specialThanks": "Agradecimientos especiales"
   },
   "browse": {
     "noTitle": "Sin título",
@@ -162,6 +178,7 @@
     "noAlternateTitles": "Sin títulos alternativos",
     "tags": "Etiquetas",
     "noTags": "Sin etiquetas",
+    "enterTag": "Introducir etiqueta",
     "series": "Serie",
     "noSeries": "Sin serie",
     "publisher": "Publicador",
@@ -181,6 +198,7 @@
     "language": "Idioma",
     "noLanguage": "Sin Idioma",
     "dateAdded": "Fecha de adición",
+    "dateModified": "Fecha de modificación",
     "brokenInInfinity": "No funciona (en Infinity)",
     "extreme": "Extremo",
     "playlistNotes": "Notas de la lista de reproducción",
@@ -198,6 +216,7 @@
     "noApplicationPath": "Sin Ruta de Aplicación",
     "launchCommand": "Comando de lanzamiento",
     "noLaunchCommand": "Sin comando de lanzamiento",
+    "searching": "Buscando...",
     "library": "Biblioteca",
     "defaultLibrary": "Biblioteca predeterminada",
     "thumbnail": "Miniatura",
@@ -205,9 +224,6 @@
     "dropImageHere": "Suelta una imagen aquí para agregarla",
     "noGameSelected": "Ningún juego seleccionado",
     "clickToSelectGame": "Haz clic en un juego para seleccionarlo.",
-    "failedToLoadPlaylistFolder": "Error al cargar la carpeta de la lista de reproducción",
-    "checkLogForInfo": "Consulte el registro para obtener más información.",
-    "loadingPlaylists": "Cargando listas de reproducción...",
     "deleteAdditionalApplication": "Eliminar aplicación adicional",
     "deleteGameAndAdditionalApps": "Eliminar juego (y aplicaciones adicionales)",
     "removeGameFromPlaylist": "Eliminar juego de la lista de reproducción",
@@ -216,6 +232,7 @@
     "editGame": "Editar juego",
     "allGames": "Todos los juegos",
     "newPlaylist": "Nueva lista de reproducción",
+    "importPlaylist": "Importar lista de reproducción",
     "emptyPlaylist": "Lista de reproducción vacía",
     "noGamesFound": "¡No se encontraron juegos!",
     "dropGameOnLeft": "Suelta un juego en esta lista de reproducción en la {0} para añadirlos.",
@@ -225,10 +242,31 @@
     "config": "Configuración",
     "noteSaveAndRestart": "Nota: Tienes que presionar {0} para que el cambio surta efecto.",
     "saveAndRestart": "Guardar y reiniciar",
-    "loadingGames": "Cargando juegos...",
     "thereAreNoGames": "No hay juegos.",
     "noGameMatchedDesc": "Ningún título de un juego coincide con tu búsqueda.",
     "noGameMatchedSearch": "Intenta buscar algo menos restrictivo."
+  },
+  "tags": {
+    "noName": "Sin nombre",
+    "description": "Descripción",
+    "noDescription": "Sin descripción",
+    "category": "Categoría",
+    "noCategory": "Sin categoría",
+    "newCategory": "Nueva categoría",
+    "enterAlias": "Introducir alias",
+    "aliases": "Alias",
+    "editTag": "Editar etiqueta",
+    "color": "Color",
+    "noTagSelected": "Ninguna etiqueta seleccionada",
+    "clickToSelectTag": "Clicar para seleccionar etiqueta",
+    "deleteTagAlias": "Eliminar alias de la etiqueta",
+    "setPrimaryAlias": "Asignar alias primario",
+    "mergeIntoTag": "Fusionar en la etiqueta",
+    "mergeTag": "Fusionar etiqueta",
+    "makeAliasWhenMerged": "¿Hacer esto una alias de la etiqueta?",
+    "deleteTag": "Eliminar etiqueta",
+    "deleteTagCategory": "Eliminar categoría de etiqueta",
+    "locked": "Bloqueado mientras se procesa..."
   },
   "curate": {
     "importAll": "Importar todo",
@@ -269,6 +307,7 @@
     "deleteCurationDesc": "Eliminar esta curación (Los archivos no pueden ser recuperados)",
     "openFolder": "Abrir carpeta",
     "run": "Ejecutar",
+    "runWithMAD4FP": "Ejecutar con MAD4FP",
     "export": "Exportar",
     "import": "Importar",
     "contentFiles": "Archivos de contenido",
@@ -291,13 +330,19 @@
     "saveDesc": "Guardar cambios realizados y dejar de editar",
     "discard": "Descartar",
     "discardDesc": "Descartar cambios realizados y dejar de editar",
+    "edit": "Editar",
+    "editDesc": "Editar esta lista de reproducción",
     "delete": "Borrar",
     "deleteDesc": "Eliminar esta lista de reproducción",
+    "changeIcon": "Cambiar icono de la lista de reproducción",
+    "duplicatePlaylistDesc": "Duplicar lista de reproducción",
+    "exportPlaylistDesc": "Exportar lista de reproducción a un archivo",
     "areYouSure": "¿Estás seguro(a)?",
     "noTitle": "Sin Título",
     "titlePlaceholder": "Título...",
     "noAuthor": "Sin Autor",
     "authorPlaceholder": "Autor...",
+    "id": "ID",
     "by": "por"
   },
   "misc": {
@@ -309,7 +354,9 @@
     "downloading": "Descargando",
     "extracting": "Extrayendo",
     "installingFiles": "Instalando archivos...",
-    "complete": "Completado"
+    "complete": "Completado",
+    "exportMetaEditTitle": "Exportar correcciones de metadatos",
+    "exportMetaEditDesc": "Selecciona todas las propiedades a exportar:"
   },
   "menu": {
     "viewThumbnailInFolder": "Ver miniatura en la carpeta",
@@ -318,7 +365,10 @@
     "duplicateMetaOnly": "Duplicado (Solo Metadatos)",
     "duplicateMetaAndImages": "Duplicado (Metadatos e Imágenes)",
     "exportMetaOnly": "Exportar (Solo Metadatos)",
-    "exportMetaAndImages": "Exportar (Metadatos e Imágenes)"
+    "exportMetaAndImages": "Exportar (Metadatos e Imágenes)",
+    "exportMetaEdit": "Exportar correcciones de metadatos",
+    "duplicatePlaylist": "Duplicar lista de reproducción",
+    "exportPlaylist": "Exportar lista de reproducción"
   },
   "dialog": {
     "programNotFound": "¡Programa no encontrado!",
@@ -328,6 +378,9 @@
     "fileNotFound": "¡Archivo no encontrado!",
     "flashpointPathInvalid": "¡Ruta de Flashpoint inválida!",
     "pathNotFound": "¡Ruta no encontrada!",
+    "playlistConflict": "Conflicto en la lista de reproducción",
+    "importedPlaylistAlreadyExists": "La lista de reproducción importada ya existe! - '{0}'",
+    "mergeOrStaySeperate": "¿Deberían fusionarse en una, o permanecer como listas de reproducción separadas?",
     "selectFileToExportMeta": "Seleccionar archivo para guardar metadatos",
     "selectFolderToExportMetaAndImages": "Seleccionar carpeta para guardar metadatos e imágenes",
     "replaceFilesQuestion": "¿Reemplazar archivos?",
@@ -335,23 +388,31 @@
     "selectFolder": "Seleccionar carpeta",
     "selectScreenshot": "Seleccionar captura de pantalla",
     "selectThumbnail": "Seleccionar miniatura",
-    "selectThemeFile": "Seleccionar archivo de tema",
     "selectCurationFolder": "Seleccionar carpeta(s) de curaciones",
     "selectCurationArchive": "Seleccionar archivo(s) de curaciones",
     "selectCurationMeta": "Seleccionar archivo(s) de metadatos de curación",
-    "errorParsingPlatforms": "¡Error al analizar plataformas!",
-    "errorParsingPlatformsMessage": "{0} Error(es) encontrado(s) mientras se analizaban los 'XMLs' de las plataformas \nPor favor mira el registro para los detalles.",
+    "selectPlaylistToImport": "Seleccione la lista de reproducción a importar",
+    "selectFileToExportPlaylist": "Seleccione el archivo donde se guardará la lista de reproducción",
     "dataRequired": "Datos adicionales requeridos",
     "dataRequiredDesc": "Debe instalar la mejora en la pantalla de inicio antes de poder usar la aplicación.\n\n¿Desea hacerlo ahora?",
     "upgradeWillInstallTo": "{0} se instalará en",
     "verifyPathSelection": "Futuras mejoras también se instalarán aquí. ¿Es esto correcto?",
     "restartNow": "¿Reiniciar ahora?",
     "restartToApplyUpgrade": "Esta mejora no será aplicada hasta que reinicies.\n¿Quieres hacer esto ahora?",
-    "areYouSure": "¿Estás seguro?"
+    "areYouSure": "¿Estás seguro?",
+    "cancel": "Cancelar",
+    "mergePlaylists": "Combinar listas de reproducción",
+    "newPlaylist": "Permanecer separadas",
+    "uploadPrivacyWarning": "Esto hará que tus registros estén disponibles públicamente.\nSe copiará un enlace al portapapeles.\n\n¿Estás seguro?",
+    "overwriteFileTitle": "¡El archivo ya existe!",
+    "overwriteFileMessage": "Ya existe un archivo con el mismo nombre. ¿Desea sobrescribirlo?",
+    "overwriteFileDetail": "Ruta del archivo:"
   },
   "libraries": {
     "arcade": "Juegos",
-    "theatre": "Animaciones"
+    "arcadePlural": "Todos los juegos",
+    "theatre": "Animaciones",
+    "theatrePlural": "Todas las animaciones"
   },
   "upgrades": {
     "infinity": "Flashpoint Infinity",
