--- a/lang/ro-RO.json
+++ b/lang/ro-RO.json
@@ -8,6 +8,8 @@
     "extremeGamesDesc": "Arătați jocuri cu conținut sexual, violent sau alte tipuri de conținut inadecvat pentru copii.",
     "enableEditing": "Activați editarea",
     "enableEditingDesc": "Activați editarea jocurilor, aplicațiilor suplimentare și listelor cu jocuri. Arată și butonul „Repară“.",
+    "onDemandImages": "Imagini la cerere",
+    "onDemandImagesDesc": "Descarcă și salvează logo-uri lipsă și capturi de ecran când e cazul.",
     "currentLanguage": "Limba principală",
     "currentLanguageDesc": "Limba principală a lansatorului.",
     "fallbackLanguage": "Limba secundară",
@@ -18,9 +20,6 @@
     "flashpointPath": "Calea spre dosarul Flashpoint",
     "flashpointPathDesc": "Calea spre dosarul lansatorului Flashpoint (poate fi relativă)",
     "browse": "Răsfoire",
-    "redirector": "Redirector",
-    "redirectorFiddler": "Fiddler",
-    "redirectorDesc": "Programul folosit pentru redirecționarea traficului de internet al joculurilor spre un server local. Nu se aplică pentru Linux.",
     "platforms": "Platforme",
     "nativePlatforms": "Platforme native",
     "nativePlatformsDesc": "Folosește versiuni native ale acestor platforme. (Dacă nu sunt disponibile, se vor folosi prin Wine)",
@@ -33,6 +32,10 @@
     "advancedHeader": "Avansat",
     "showDeveloperTab": "Arătați butonul „Dezvoltator“",
     "showDeveloperTabDesc": "Se va arăta butonul „Dezvoltator“. Cel mai folositor va fi pentru dezvoltatori și reparatori.",
+    "server": "Server",
+    "serverDesc": "Procesul pentru sever care rulează la pornirea lansatorului.",
+    "metadataServerHost": "Gazda serverului de date meta",
+    "metadataServerHostDesc": "Folosit pentru obținerea de informații actualizate ale jocurilor în lansator.",
     "saveAndRestart": "Salvare și repornire"
   },
   "home": {
@@ -52,7 +55,7 @@
     "configInfo": "Doriți să modificați ceva? Treceți la {0}.",
     "config": "configurări",
     "helpInfo": "Aveți nevoie de ajutor? {0}.",
-    "help": "Citiți fișierul de asistență",
+    "help": "Citiți manualul",
     "upgradesHeader": "Suplimente",
     "installComplete": "Instalare completă",
     "alreadyInstalled": "Instalat deja",
@@ -65,19 +68,25 @@
     "filterByPlatform": "Filtrați în funcție de platformă",
     "plannedFeatures": "Vedeți ce funcționalități am planificat pentru dvs!",
     "notesHeader": "Note",
-    "notes": "Citiți fișierul de asistență, în cazul în care aveți dificultăți.",
+    "notes": "Nu uitați să citiți manualul dacă întâmpinați probleme.",
     "linuxSupport": "Apar probleme pe Linux? {0}",
     "linuxSupportLinkText": "Vizitați FAQ",
-    "randomPicks": "Alese la întâmplare"
+    "randomPicks": "Alese la întâmplare",
+    "rerollPicks": "Alegeți din nou"
   },
   "logs": {
     "filters": "Filtre",
     "copyText": "Copiați textul",
-    "clearLog": "Goliți jurnalul"
+    "clearLog": "Goliți jurnalul",
+    "copy404Urls": "Copiază URL-urile 404",
+    "uploadLog": "Încarcă jurnalul",
+    "copiedToClipboard": "Copied to Clipboard"
   },
   "app": {
     "home": "Pag. principală",
     "browse": "Răsfoire",
+    "tags": "Etichete",
+    "categories": "Categorii",
     "logs": "Jurnal",
     "config": "Configurări",
     "about": "Despre",
@@ -96,7 +105,7 @@
   },
   "filter": {
     "dateAdded": "Data adăugării",
-    "tags": "Etichete",
+    "dateModified": "Data modificării",
     "platform": "Platformă",
     "series": "Serie",
     "title": "Titlu",
@@ -128,6 +137,12 @@
     "renameImagesIdToTitleDesc": "Înlocuiește numele tuturor imaginilor care conțin ID-ul jocului cu numele jocului",
     "createMissingFolders": "Creați dosarele lipsă",
     "createMissingFoldersDesc": "Găsește toate dosarele lipsă din structura dosarului principal Flashpoint și le creează",
+    "importLegacyPlatforms": "Importați platformele vechi",
+    "importLegacyPlatformsDesc": "Importă platforme vechi din dosarul „Data/Platforms/“\nATENȚIE: Va suprascrie jocurile conflictuale",
+    "importLegacyPlaylists": "Importați listele vechi de joc",
+    "importLegacyPlaylistsDesc": "Importați liste de joc din versiuni anterioare ale lansatorului din dosarul \"Data/Playlists/\"",
+    "importMetaEdits": "Importați modificări ale datelor meta",
+    "importMetaEditsDesc": "Importă toate schimbările de date meta din dosarul „Data/MetaEdits/“",
     "servicesHeader": "Servicii ce rulează în fundal",
     "servicesMissing": "Nu există astfel de servicii.",
     "running": "Rulează",
@@ -152,7 +167,8 @@
     "version": "Versiunea",
     "license": "Licența",
     "licenseInfo": "MIT (citiți fișierul „Licență“ pentru informații suplimentare)",
-    "creditsHeader": "Acreditări"
+    "creditsHeader": "Acreditări",
+    "specialThanks": "Mulțumiri deosebite"
   },
   "browse": {
     "noTitle": "Nu este introdus niciun titlu",
@@ -162,6 +178,7 @@
     "noAlternateTitles": "Fără titluri alternative",
     "tags": "Etichete",
     "noTags": "Fără etichete",
+    "enterTag": "Introduceți eticheta",
     "series": "Seria",
     "noSeries": "Nu este introdusă seria",
     "publisher": "Site-ul de publicare",
@@ -181,6 +198,7 @@
     "language": "Limba",
     "noLanguage": "Nu este introdusă nicio limbă",
     "dateAdded": "Data adăugării",
+    "dateModified": "Data modificării",
     "brokenInInfinity": "Nefuncțional în Flashpoint Infinity",
     "extreme": "Matur",
     "playlistNotes": "Notele listei de jocuri",
@@ -198,6 +216,7 @@
     "noApplicationPath": "Nu este introdusă calea aplicației",
     "launchCommand": "Comandă de lansare",
     "noLaunchCommand": "Nu este introdusă comanda de lansare",
+    "searching": "Se caută...",
     "library": "Categorie",
     "defaultLibrary": "Categoria implicită",
     "thumbnail": "logo-ul jocului",
@@ -205,9 +224,6 @@
     "dropImageHere": "Glisați aici o imagine pentru a o adăuga",
     "noGameSelected": "Niciun joc selectat",
     "clickToSelectGame": "Apăsați pe un joc pentru a-l selecta.",
-    "failedToLoadPlaylistFolder": "Nu s-a putut încărca dosarul de liste de joc",
-    "checkLogForInfo": "Verificați jurnalul pentru mai multe informații.",
-    "loadingPlaylists": "Se încarcă listele de joc...",
     "deleteAdditionalApplication": "Înlăturați aplicația suplimentară",
     "deleteGameAndAdditionalApps": "Înlăturați jocul (împreună cu aplicațiile sale suplimentare)",
     "removeGameFromPlaylist": "Înlăturați jocul din listă",
@@ -216,6 +232,7 @@
     "editGame": "Editați jocul",
     "allGames": "Toate jocurile",
     "newPlaylist": "Listă de joc nouă",
+    "importPlaylist": "Importați lista de joc",
     "emptyPlaylist": "Lista este goală",
     "noGamesFound": "Niciun joc găsit.",
     "dropGameOnLeft": "Glisați un joc în {0} pentru a-l adăuga.",
@@ -225,10 +242,31 @@
     "config": "configurări",
     "noteSaveAndRestart": "Notă: Este necesar să apăsați {0} pentru ca modificările să se aplice.",
     "saveAndRestart": "Salvare și repornire",
-    "loadingGames": "Se încarcă jocurile...",
     "thereAreNoGames": "Nu s-au găsit jocuri.",
     "noGameMatchedDesc": "Niciun joc nu se potrivește cu termenii de căutare.",
     "noGameMatchedSearch": "Încercați alte cuvinte cheie."
+  },
+  "tags": {
+    "noName": "Lipsă nume",
+    "description": "Descriere",
+    "noDescription": "Lipsă descriere",
+    "category": "Categorie",
+    "noCategory": "Lipsă categorie",
+    "newCategory": "Categorie nouă",
+    "enterAlias": "Introduceți un pseudonim",
+    "aliases": "Pseudonime",
+    "editTag": "Modificați eticheta",
+    "color": "Culoare",
+    "noTagSelected": "Nicio etichetă selectată",
+    "clickToSelectTag": "Apăsați pentru a selecta eticheta",
+    "deleteTagAlias": "Ștergeți pseudonimul etichetelor",
+    "setPrimaryAlias": "Setați pseudonimul principal",
+    "mergeIntoTag": "Îmbinați în etichetă",
+    "mergeTag": "Îmbinați eticheta",
+    "makeAliasWhenMerged": "Sigur doriți să stabiliți acest pseudonim ca numele etichetei?",
+    "deleteTag": "Ştergeți eticheta",
+    "deleteTagCategory": "Ștergeți categoria de etichete",
+    "locked": "Blocate în timpul procesării..."
   },
   "curate": {
     "importAll": "Importați tot",
@@ -269,6 +307,7 @@
     "deleteCurationDesc": "Ștergeți această reparație (fișierele nu pot fi recuperate)",
     "openFolder": "Deschideți dosarul reparațiilor",
     "run": "Executare",
+    "runWithMAD4FP": "Run with MAD4FP",
     "export": "Exportare",
     "import": "Importare",
     "contentFiles": "Fișiere",
@@ -291,13 +330,19 @@
     "saveDesc": "Salvați modificările făcute și încheiați editarea",
     "discard": "Renunțare",
     "discardDesc": "Renunțați la modificări și încheiați editarea",
+    "edit": "Modificați",
+    "editDesc": "Modificați această listă de joc",
     "delete": "Ștergere",
     "deleteDesc": "Șterge această listă",
+    "changeIcon": "Modificați iconița listei de joc",
+    "duplicatePlaylistDesc": "Listă de joc duplicat",
+    "exportPlaylistDesc": "Exportă lista de joc într-un fișier",
     "areYouSure": "Sunteți sigur(ă)?",
     "noTitle": "Fără titlu",
     "titlePlaceholder": "Introduceți un titlu...",
     "noAuthor": "Nu este precizat autorul",
     "authorPlaceholder": "Introduceți numele autorului...",
+    "id": "ID",
     "by": "după"
   },
   "misc": {
@@ -309,7 +354,9 @@
     "downloading": "Se descarcă",
     "extracting": "Se extrage",
     "installingFiles": "Se instalează fișierele...",
-    "complete": "Finalizat"
+    "complete": "Finalizat",
+    "exportMetaEditTitle": "Exportați modificări ale datelor meta",
+    "exportMetaEditDesc": "Selectați proprietățile de exportat:"
   },
   "menu": {
     "viewThumbnailInFolder": "Vizualizați imaginea în dosar",
@@ -318,7 +365,10 @@
     "duplicateMetaOnly": "Dublare (numai date Meta)",
     "duplicateMetaAndImages": "Dublare (date Meta și imagini)",
     "exportMetaOnly": "Exportare (numai date Meta)",
-    "exportMetaAndImages": "Exportați (date Meta și imagini)"
+    "exportMetaAndImages": "Exportați (date Meta și imagini)",
+    "exportMetaEdit": "Exportați modificări ale datelor meta",
+    "duplicatePlaylist": "Listă de joc duplicat",
+    "exportPlaylist": "Exportați lista de joc"
   },
   "dialog": {
     "programNotFound": "Programul nu a fost găsit.",
@@ -328,6 +378,9 @@
     "fileNotFound": "Fișierul nu a fost găsit.",
     "flashpointPathInvalid": "Destinație invalidă pentru Flashpoint.",
     "pathNotFound": "Calea nu a fost găsită.",
+    "playlistConflict": "Conflict de listă de joc",
+    "importedPlaylistAlreadyExists": "Lista de redare „{0}“ există deja!",
+    "mergeOrStaySeperate": "Doriți să îmbinați listele de joc?",
     "selectFileToExportMeta": "Selectați un fișier pentru salvarea datelor Meta",
     "selectFolderToExportMetaAndImages": "Selectați un dosar pentru salvarea datelor Meta și imaginilor",
     "replaceFilesQuestion": "Doriți să înlocuiți fișierele?",
@@ -335,23 +388,31 @@
     "selectFolder": "Alegeți un dosar",
     "selectScreenshot": "Selectați imaginea",
     "selectThumbnail": "Selectați imaginea",
-    "selectThemeFile": "Selectați fișierul de temă vizuală",
     "selectCurationFolder": "Selectați dosarul / dosarele de reparare",
     "selectCurationArchive": "Selectați arhiva / arhivele de reparare",
     "selectCurationMeta": "Selectați Metadatele de reparare",
-    "errorParsingPlatforms": "Nu s-au putut identifica platformele.",
-    "errorParsingPlatformsMessage": "{0} eroare / erori au apărut la citirea fișierelor XML.\nVerificați fișierele de jurnal pentru detalii.",
+    "selectPlaylistToImport": "Selectați lista de joc de importat",
+    "selectFileToExportPlaylist": "Selectați un fișier pentru salvarea listei de joc",
     "dataRequired": "Sunt necesare date suplimentare",
     "dataRequiredDesc": "Înainte de a putea folosi lansatorul, trebuie să instalați actualizarea de pe ecranul de pornire.\n\nDoriți să faceți asta acum?",
     "upgradeWillInstallTo": "{0} va fi instalat în",
     "verifyPathSelection": "Actualizările viitoare se vor instala aici. Este corect?",
     "restartNow": "Doriți să reporniți acum?",
     "restartToApplyUpgrade": "Această actualizare nu va fi aplicată până când nu reporniți programul. Doriți să faceți asta acum?",
-    "areYouSure": "Sunteți sigur(ă)?"
+    "areYouSure": "Sunteți sigur(ă)?",
+    "cancel": "Revocare",
+    "mergePlaylists": "Îmbinați liste de jocuri",
+    "newPlaylist": "Păstrați listele separat",
+    "uploadPrivacyWarning": "This will make your Logs available publically.\nA link will be copied to your clipboard.\n\nAre you sure?",
+    "overwriteFileTitle": "File already exists!",
+    "overwriteFileMessage": "A file with the same name already exists. Do you want to overwrite it?",
+    "overwriteFileDetail": "File path:"
   },
   "libraries": {
     "arcade": "Jocuri",
-    "theatre": "Animații"
+    "arcadePlural": "Toate jocurile",
+    "theatre": "Animații",
+    "theatrePlural": "Toate animațiile"
   },
   "upgrades": {
     "infinity": "Flashpoint Infinity",
