--- a/lang/tr-TR.json
+++ b/lang/tr-TR.json
@@ -1,5 +1,5 @@
 {
-  "name": "İngilizce",
+  "name": "Türkçe",
   "config": {
     "configHeader": "Yapılandırma",
     "configDesc": "(Bazı değişikliklerin meydana gelmesi için 'Kaydet & Yeniden Başlat'a basmanız gerekir)",
@@ -7,9 +7,11 @@
     "extremeGames": "Ekstrem Oyunlar",
     "extremeGamesDesc": "Cinsellik, şiddet içeren ya da çocuklar için uygunsuz olan oyunları göster.",
     "enableEditing": "Değişikliklere İzin Ver",
-    "enableEditingDesc": "Oyunlarda, ekstra uygulamalara ve oynatma listelerinde değişikliklere izin verir. Ayrıca 'Yarat' panelini gösterir.",
+    "enableEditingDesc": "Oyunlarda, ekstra uygulamalara ve oynatma listelerinde değişikliklere izin ver. Ayrıca 'Yarat' panelini gösterir.",
+    "onDemandImages": "İsteğe Bağlı Görüntüler",
+    "onDemandImagesDesc": "Gerektiğinde eksik logoları ve ekran görüntülerini indir ve kaydet.",
     "currentLanguage": "Dil",
-    "currentLanguageDesc": "Temel olarak hangi dil kullanıldığını gösterir.",
+    "currentLanguageDesc": "Temel olarak hangi dilin kullanılacağını gösterir.",
     "fallbackLanguage": "İkincil Dil",
     "fallbackLanguageDesc": "Tamamlanmamış mevcut dilin yerine hangi dilin kullanılacağını gösterir.",
     "auto": "Otomatik ({0})",
@@ -18,9 +20,6 @@
     "flashpointPath": "Flashpoint Yolu",
     "flashpointPathDesc": "Flashpoint klasörüne yol (komşu olabilir)",
     "browse": "Ara",
-    "redirector": "Redirector",
-    "redirectorFiddler": "Fiddler",
-    "redirectorDesc": "Yerel web sunucusuna iletmek için hangi yazılımın kullanılacağını gösterir. Hiçbiri Linux'ta çalışmaz.",
     "platforms": "Platformlar",
     "nativePlatforms": "Yerli Platformlar",
     "nativePlatformsDesc": "Platformların Yerli sürümlerini kullan. (Uygun değilse Wine kullanır)",
@@ -33,6 +32,10 @@
     "advancedHeader": "Gelişmiş",
     "showDeveloperTab": "Geliştirici Panelini Göster",
     "showDeveloperTabDesc": "'Geliştirici' panelini göster. Bu daha çok geliştiriciler ve küratörler için kullanışlıdır.",
+    "server": "Sunucu",
+    "serverDesc": "Başlatıcı çalıştırıldığında hangi Sunucu İşleminin çalışacağını seçer.",
+    "metadataServerHost": "Metadata Sunucu Merkezi",
+    "metadataServerHostDesc": "Bir metadata sunucusunun merkezi. Yeni ve güncellenmiş oyun bilgisini başlatıcıyla senkronize etmek için kullanılır.",
     "saveAndRestart": "Kaydet ve Yeniden Başlat"
   },
   "home": {
@@ -52,7 +55,7 @@
     "configInfo": "Bir şeyi mi değiştirmek istiyorsun? {0}'a git.",
     "config": "Yapılandırma",
     "helpInfo": "Yardım mı lazım? {0}.",
-    "help": "Benioku'yu Oku",
+    "help": "Kullanım kılavuzunu oku",
     "upgradesHeader": "Güncellemeler",
     "installComplete": "İndirme Tamamlandı",
     "alreadyInstalled": "Zaten Yüklü",
@@ -65,19 +68,25 @@
     "filterByPlatform": "Platforma göre filtrele",
     "plannedFeatures": "Planladığımız içeriklere göz at!",
     "notesHeader": "Notlar",
-    "notes": "Eğer sıkıntılarınız varsa benioku'yu okumayı unutmayın.",
+    "notes": "Eğer sıkıntılarınız varsa kullanım kılavuzunu okumayı unutmayın.",
     "linuxSupport": "Linux'ta Sıkıntı? {0}",
     "linuxSupportLinkText": "SSS'i Aç",
-    "randomPicks": "Rastgele Seçimler"
+    "randomPicks": "Rastgele Seçimler",
+    "rerollPicks": "Seçimleri Yeniden Yuvarla"
   },
   "logs": {
     "filters": "Filtreler",
     "copyText": "Metni Kopyala",
-    "clearLog": "Kayıtları Temizle"
+    "clearLog": "Kayıtları Temizle",
+    "copy404Urls": "404 URL'lerini kopyala",
+    "uploadLog": "Kayıtları Yükle",
+    "copiedToClipboard": "Panoya Kopyalandı"
   },
   "app": {
-    "home": "Ev",
+    "home": "Ana Sayfa",
     "browse": "Ara",
+    "tags": "Etiketler",
+    "categories": "Kategoriler",
     "logs": "Kayıtlar",
     "config": "Yapılandırma",
     "about": "Hakkında",
@@ -96,7 +105,7 @@
   },
   "filter": {
     "dateAdded": "Eklenen Tarih",
-    "tags": "Etiketler",
+    "dateModified": "Düzenlenme Tarihi",
     "platform": "Platform",
     "series": "Seriler",
     "title": "Başlık",
@@ -117,7 +126,7 @@
     "checkGameFields": "Oyun Alanlarını Göster",
     "checkGameFieldsDesc": "Boş alana sahip olan oyunları listele (ya da boş olmaması gereken alanları)",
     "checkPlaylists": "Oyun Listelerini Göster",
-    "checkPlaylistsDesc": "Eksik, geçersiz ya da aynı IDlere sahip oyun listelerini listele",
+    "checkPlaylistsDesc": "Eksik, geçersiz ya da aynı IDlere sahip oyun listelerini, ya da eksik, geçersiz ya da aynı IDlere sahip oyun girişlerini listele",
     "checkGameFileLocation": "Oyun Dosya Konumunu Göster",
     "checkGameFileLocationDesc": "Dosya yollarına ayrıştırılamayan başlatma komutlarına sahip tüm oyunları listeleyin (Bu 'Dosya Konumunu Aç' fonksiyonu ile alakalı, oyunu başlatma ile değil)",
     "checkMissingExecMappings": "Eksik yürütme haritalarını denetle",
@@ -128,6 +137,12 @@
     "renameImagesIdToTitleDesc": "Dosya adında oyun ID'sini taşıyan oyun resimlerini bul ve onları başlıklarını kullanmak için yeniden adlandır",
     "createMissingFolders": "Eksik Klasörleri Oluştur",
     "createMissingFoldersDesc": "Flashpoint klasöründe bulunan tüm eksik klasörleri bul ve onları oluştur",
+    "importLegacyPlatforms": "Eski Platformları İçe Aktar",
+    "importLegacyPlatformsDesc": "'Data/Platforms/' dan Eski Platformları İçe Aktarır - UYARI: çakışan oyunların üstüne yazar",
+    "importLegacyPlaylists": "Eski Oynama Listelerini İçe Aktar",
+    "importLegacyPlaylistsDesc": "'/Data/Playlists/' den Eski Oynama Listelerini İçe Aktarır",
+    "importMetaEdits": "Meta Düzenlemelerini İçe Aktar",
+    "importMetaEditsDesc": "'/Data/MetaEdits' ten TÜM Meta Editlerini İçe Aktarır",
     "servicesHeader": "Arka Plan Hizmetleri",
     "servicesMissing": "Burada bir hizmet yok.",
     "running": "Çalışıyor",
@@ -147,12 +162,13 @@
     "flashpoint": "BlueMaxima's Flashpoint",
     "flashpointDesc": "Bu saklama projesi başlatıcısının amacı, bir arşiv, müze ve ağ-tabanlı İnternet oyunlarının oynanabilir bir koleksiyonu olmaktır.",
     "website": "Web sitesi",
-    "flashpointLauncher": "Flashpoint Launcher",
+    "flashpointLauncher": "Flashpoint Başlatıcı",
     "flashpointLauncherDesc": "Flashpoint projesinden oyunlar aramak, düzenlemek ve oynamak için kullanılan açık-kaynak bir bilgisayar uygulamasıdır.",
     "version": "Sürüm",
     "license": "Lisans",
     "licenseInfo": "MIT (daha fazla bilgi için 'LICENSE' dosyasını oku)",
-    "creditsHeader": "Teşekkürler"
+    "creditsHeader": "Teşekkürler",
+    "specialThanks": "Özel Teşekkürler"
   },
   "browse": {
     "noTitle": "Başlık Yok",
@@ -162,6 +178,7 @@
     "noAlternateTitles": "Alternatif Başlık Yok",
     "tags": "Etiketler",
     "noTags": "Etiket Yok",
+    "enterTag": "Etiket Gir",
     "series": "Seriler",
     "noSeries": "Seri Yok",
     "publisher": "Yayımcı",
@@ -181,6 +198,7 @@
     "language": "Dil",
     "noLanguage": "Dil Yok",
     "dateAdded": "Eklenen Tarih",
+    "dateModified": "Düzenlenme Tarihi",
     "brokenInInfinity": "Bozuk (İnfinity'de)",
     "extreme": "Ekstrem",
     "playlistNotes": "Oyun Listesi Notları",
@@ -198,6 +216,7 @@
     "noApplicationPath": "Uygulama Yolu Yok",
     "launchCommand": "Çalışma Komudu",
     "noLaunchCommand": "Çalışma Komudu Yok",
+    "searching": "Aranıyor...",
     "library": "Arşiv",
     "defaultLibrary": "Varsayılan Arşiv",
     "thumbnail": "Küçükresim",
@@ -205,9 +224,6 @@
     "dropImageHere": "Eklemek için bir resmi buraya bırakın",
     "noGameSelected": "Seçili Oyun Yok",
     "clickToSelectGame": "Seçmek için bir oyuna tıklayın.",
-    "failedToLoadPlaylistFolder": "Oynama listesi klasörü yüklenemedi",
-    "checkLogForInfo": "Daha fazla bilgi için kayıtlara göz atın.",
-    "loadingPlaylists": "Oynama Listeleri Yükleniyor...",
     "deleteAdditionalApplication": "Ek Uygulamaları Sil",
     "deleteGameAndAdditionalApps": "Oyunu Sil (ve Ek Uygulamaları)",
     "removeGameFromPlaylist": "Oyunu Oynama Listesinden Kaldır",
@@ -216,6 +232,7 @@
     "editGame": "Oyunu Düzenle",
     "allGames": "Tüm Oyunlar",
     "newPlaylist": "Yeni Oynama Listesi",
+    "importPlaylist": "Oynama Listesini İçe Aktar",
     "emptyPlaylist": "Boş Oynama Listesi",
     "noGamesFound": "Oyun Bulunamadı!",
     "dropGameOnLeft": "Oynama listesinin üzerine {0}'ın içine bir oyun bırakarak ekle.",
@@ -225,10 +242,31 @@
     "config": "Yapılandırma",
     "noteSaveAndRestart": "Not: Değişikliklerin etki etmesi için {0}'a basın.",
     "saveAndRestart": "Kaydet & Yeniden Başlat",
-    "loadingGames": "Oyunlar Yükleniyor...",
     "thereAreNoGames": "Oyun yok.",
     "noGameMatchedDesc": "Aramanızla eşleşen bir oyun yok.",
     "noGameMatchedSearch": "Daha az kısıtlayıcı bir şey aramayı deneyin."
+  },
+  "tags": {
+    "noName": "İsim Yok",
+    "description": "Açıklama",
+    "noDescription": "Açıklama Yok",
+    "category": "Kategori",
+    "noCategory": "Kategori Yok",
+    "newCategory": "Yeni Kategori",
+    "enterAlias": "İsim Girin",
+    "aliases": "İsimler",
+    "editTag": "Etiketi Düzenle",
+    "color": "Renk",
+    "noTagSelected": "Seçili Etiket Yok",
+    "clickToSelectTag": "Etiket Seçmek için Tıkla",
+    "deleteTagAlias": "İsim Etiketlerini Sil",
+    "setPrimaryAlias": "Temel İsimler Ayarla",
+    "mergeIntoTag": "Etiketleri Birleştir",
+    "mergeTag": "Etiketi Birleştir",
+    "makeAliasWhenMerged": "Bunu etiketin takma bir ismi yap?",
+    "deleteTag": "Etiketi Sil",
+    "deleteTagCategory": "Etiket Kategorisini Sil",
+    "locked": "İşlenirken kilitlendi..."
   },
   "curate": {
     "importAll": "Tümünü İçe Aktar",
@@ -269,6 +307,7 @@
     "deleteCurationDesc": "Bu kürasyonu sil (Dosyalar geri alınamaz)",
     "openFolder": "Klasörü Aç",
     "run": "Çalıştır",
+    "runWithMAD4FP": "MAD4FP ile çalıştır",
     "export": "Dışa aktar",
     "import": "İçe aktar",
     "contentFiles": "İçerik Dosyaları",
@@ -291,13 +330,19 @@
     "saveDesc": "Yapılan değişiklikleri kaydet ve düzenlemeyi durdur",
     "discard": "Vazgeç",
     "discardDesc": "Yapılan değişiklikleri iptal et ve düzenlemeyi durdur",
+    "edit": "Düzenle",
+    "editDesc": "Bu Oynama Listesini Düzenle",
     "delete": "Sil",
     "deleteDesc": "Bu oynama listesini sil",
+    "changeIcon": "Oynama Listesi İkonunu Değiştir",
+    "duplicatePlaylistDesc": "Oynama Listesini Kopyala",
+    "exportPlaylistDesc": "Oynama Listesini bir dosyaya çıkar",
     "areYouSure": "Emin misin?",
     "noTitle": "Başlık Yok",
     "titlePlaceholder": "Başlık...",
     "noAuthor": "Yapımcı Yok",
     "authorPlaceholder": "Yapımcı...",
+    "id": "ID",
     "by": "tarafından"
   },
   "misc": {
@@ -309,7 +354,9 @@
     "downloading": "İndiriliyor",
     "extracting": "Çıkarılıyor",
     "installingFiles": "Dosyalar Yükleniyor...",
-    "complete": "Tamamlandı"
+    "complete": "Tamamlandı",
+    "exportMetaEditTitle": "Meta Düzenlemesini Dışa Aktar",
+    "exportMetaEditDesc": "Dışa aktarılacak tüm özellikleri seç:"
   },
   "menu": {
     "viewThumbnailInFolder": "Klasördeki küçükresmi İncele",
@@ -318,7 +365,10 @@
     "duplicateMetaOnly": "Kopyala (Sadece Meta)",
     "duplicateMetaAndImages": "Kopyala (Meta & Resimler)",
     "exportMetaOnly": "Dışa Aktar (Sadece Meta)",
-    "exportMetaAndImages": "Dışa Aktar (Meta & Resimler)"
+    "exportMetaAndImages": "Dışa Aktar (Meta & Resimler)",
+    "exportMetaEdit": "Meta Düzenlemesini Dışa Aktar",
+    "duplicatePlaylist": "Oynama Listesini Kopyala",
+    "exportPlaylist": "Oynama Listesini Dışa Aktar"
   },
   "dialog": {
     "programNotFound": "Program bulunamadı!",
@@ -328,6 +378,9 @@
     "fileNotFound": "Dosya bulunamadı!",
     "flashpointPathInvalid": "Flashpoint yolu geçersiz!",
     "pathNotFound": "Yol bulunamadı!",
+    "playlistConflict": "Çakışan Oynama Listeleri",
+    "importedPlaylistAlreadyExists": "İçe Aktarılmış Oynama Listesi zaten mevcut! - '{0}",
+    "mergeOrStaySeperate": "Bir klasöre mi birleşsinler, yoksa ayrı oynama listeleri olarak mı kalsınlar?",
     "selectFileToExportMeta": "Metayı kaydetmek için dosya seç",
     "selectFolderToExportMetaAndImages": "Meta ve resimleri kaydemek için klasör seç",
     "replaceFilesQuestion": "Dosyaları değiştir?",
@@ -335,23 +388,31 @@
     "selectFolder": "Klasör Seç",
     "selectScreenshot": "Ekran Görüntüsü Seç",
     "selectThumbnail": "Küçükresim Seç",
-    "selectThemeFile": "Tema Dosyası Seç",
     "selectCurationFolder": "Kürasyon Klasörü ya da Klasörleri Seç",
     "selectCurationArchive": "Kürasyon Arşivi ya da Arşivleri Seç",
     "selectCurationMeta": "Kürasyon Metası ya da Metaları Seç",
-    "errorParsingPlatforms": "Platformların ayrıştırılması sırasında hata oluştu!",
-    "errorParsingPlatformsMessage": "Platform XML'lerini ayrıştırırken {0} hata meydana geldi\nDetaylar için lütfen kayıtlara bakın.",
+    "selectPlaylistToImport": "İçe Aktarılacak Oynama Listesini Seç",
+    "selectFileToExportPlaylist": "Oynama Listesinin kaydedileceği dosyayı seç",
     "dataRequired": "Ek Bilgi Gerekli",
     "dataRequiredDesc": "Başlatıcıyı kullanmadan önce ana ekrandaki Güncellemeyi indirmelisin.\n\nŞimdi yapmak istiyor musun?",
     "upgradeWillInstallTo": "{0} şuraya yüklenecek",
     "verifyPathSelection": "Gelecekteki güncellemeler de buraya indirilecek. Doğru mu?",
     "restartNow": "Şimdi Yeniden Başlat?",
     "restartToApplyUpgrade": "Bu güncelleme yeniden başlatana kadar geçerli olmaz.\nŞimdi yapmak istiyor musun?",
-    "areYouSure": "Emin misin?"
+    "areYouSure": "Emin misin?",
+    "cancel": "İptal Et",
+    "mergePlaylists": "Oynama Listelerini Birleştir",
+    "newPlaylist": "Ayrı Tut",
+    "uploadPrivacyWarning": "Bu, Kayıtlarını herkese mevcut yapacak.\nBir link panoya kopyalanacak.\n\nEmin misin?",
+    "overwriteFileTitle": "Dosya zaten mevcut!",
+    "overwriteFileMessage": "Aynı adı taşıyan bir dosya zaten var. Üzerine yazmak istiyor musunuz?",
+    "overwriteFileDetail": "Dosya yolu:"
   },
   "libraries": {
     "arcade": "Oyunlar",
-    "theatre": "Animasyonlar"
+    "arcadePlural": "Tüm Oyunlar",
+    "theatre": "Animasyonlar",
+    "theatrePlural": "Tüm Animasyonlar"
   },
   "upgrades": {
     "infinity": "Flashpoint Infinity",
