--- a/lang/en.json
+++ b/lang/en.json
@@ -20,6 +20,9 @@
     "flashpointPath": "Flashpoint Path",
     "flashpointPathDesc": "Path to the Flashpoint folder (can be relative)",
     "browse": "Browse",
+    "libraries": "Libraries",
+    "randomLibraries": "Random Libraries",
+    "randomLibrariesDesc": "Libraries to use for Random Picks on the home page.",
     "platforms": "Platforms",
     "nativePlatforms": "Native Platforms",
     "nativePlatformsDesc": "Use Native versions of these platforms. (If not available it will use Wine)",
