--- a/lang/en.json
+++ b/lang/en.json
@@ -31,7 +31,10 @@
     "useCustomTitleBarDesc": "Use a custom title bar at the top of this window.",
     "theme": "Theme",
     "noTheme": "No Theme",
-    "themeDesc": "File path of the theme to use (relative to the themes folder).",
+    "themeDesc": "ID of the theme to use.",
+    "logoSet": "Logo Set",
+    "noLogoSet": "No Logo Set",
+    "logoSetDesc": "ID of the logo set to use.",
     "advancedHeader": "Advanced",
     "showDeveloperTab": "Show Developer Tab",
     "showDeveloperTabDesc": "Show the 'Developer' tab. This is most likely only useful for developers and curators.",
