--- a/lang/en.json
+++ b/lang/en.json
@@ -369,7 +369,8 @@
     "noAuthor": "No Author",
     "authorPlaceholder": "Author...",
     "id": "ID",
-    "by": "by"
+    "by": "by",
+    "extreme": "extreme"
   },
   "misc": {
     "noBlankFound": "No {0} Found",
