add translation for extreme playlists to all languages

--- a/lang/cs-CZ.json
+++ b/lang/cs-CZ.json
@@ -343,7 +343,8 @@
     "noAuthor": "Žádný autor",
     "authorPlaceholder": "Autor...",
     "id": "ID",
-    "by": "od"
+    "by": "od",
+    "extreme": "pro dospělé"
   },
   "misc": {
     "noBlankFound": "Žádn(ý/á) {0} nenalezen(a)",
