--- a/lang/hu-HU.json
+++ b/lang/hu-HU.json
@@ -343,7 +343,8 @@
     "noAuthor": "Nincs szerző",
     "authorPlaceholder": "Szerző...",
     "id": "ID",
-    "by": "által"
+    "by": "által",
+    "extreme": "extrém"
   },
   "misc": {
     "noBlankFound": "Nem Található",
