--- a/lang/es-ES.json
+++ b/lang/es-ES.json
@@ -343,7 +343,8 @@
     "noAuthor": "Sin Autor",
     "authorPlaceholder": "Autor...",
     "id": "ID",
-    "by": "por"
+    "by": "por",
+    "extreme": "extremo"
   },
   "misc": {
     "noBlankFound": "Ninguna {0} Encontrada",
