--- a/lang/fi-FI.json
+++ b/lang/fi-FI.json
@@ -343,7 +343,8 @@
     "noAuthor": "Ei kehittäjää",
     "authorPlaceholder": "Kehittäjä...",
     "id": "ID",
-    "by": "luonut"
+    "by": "luonut",
+    "extreme": "lapsille sopimaton"
   },
   "misc": {
     "noBlankFound": "{0} ei löydy",
