--- a/lang/fr-FR.json
+++ b/lang/fr-FR.json
@@ -343,7 +343,8 @@
     "noAuthor": "Pas d'auteur(e)",
     "authorPlaceholder": "Auteur(e)...",
     "id": "Identifiant",
-    "by": "par"
+    "by": "par",
+    "extreme": "extrême"
   },
   "misc": {
     "noBlankFound": "Aucune {0} trouvée",
