--- a/lang/pl-PL.json
+++ b/lang/pl-PL.json
@@ -343,7 +343,8 @@
     "noAuthor": "Brak Autora",
     "authorPlaceholder": "Autor...",
     "id": "ID",
-    "by": "autorstwa"
+    "by": "autorstwa",
+    "extreme": "ekstremalna"
   },
   "misc": {
     "noBlankFound": "Nie Znaleziono {0}",
