--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -343,7 +343,8 @@
     "noAuthor": "Sem Autor",
     "authorPlaceholder": "Autor...",
     "id": "ID",
-    "by": "por"
+    "by": "por",
+    "extreme": "extremo"
   },
   "misc": {
     "noBlankFound": "{0} Não Foi Encontrada",
