feat: Play Button

--- a/lang/en.json
+++ b/lang/en.json
@@ -198,6 +198,7 @@
   "browse": {
     "noTitle": "No Title",
     "by": "by",
+    "play": "Play",
     "noDeveloper": "No Developer",
     "alternateTitles": "Alternate Titles",
     "noAlternateTitles": "No Alternate Titles",
