--- a/lang/en.json
+++ b/lang/en.json
@@ -199,6 +199,7 @@
     "noTitle": "No Title",
     "by": "by",
     "play": "Play",
+    "stop": "Stop",
     "noDeveloper": "No Developer",
     "alternateTitles": "Alternate Titles",
     "noAlternateTitles": "No Alternate Titles",
