fix: Use strings for tag and category list headers

--- a/lang/en.json
+++ b/lang/en.json
@@ -274,6 +274,7 @@
     "noGameMatchedSearch": "Try searching for something less restrictive."
   },
   "tags": {
+    "name": "Name",
     "noName": "No Name",
     "description": "Description",
     "noDescription": "No Description",
