--- a/lang/en.json
+++ b/lang/en.json
@@ -432,6 +432,7 @@
     "restartNow": "Restart Now?",
     "restartToApplyUpgrade": "This upgrade will not be applied until you restart.\nDo you wish to do this now?",
     "areYouSure": "Are you sure?",
+    "areYouSureDelete": "Are you sure you want to delete this entry?",
     "cancel": "Cancel",
     "mergePlaylists": "Merge Playlists",
     "newPlaylist": "Stay Seperate",
