feat: Tag Filter Groups (mostly done)
Strings need added for localization

--- a/lang/en.json
+++ b/lang/en.json
@@ -26,6 +26,8 @@
     "platforms": "Platforms",
     "nativePlatforms": "Native Platforms",
     "nativePlatformsDesc": "Use Native versions of these platforms. (If not available it will use Wine)",
+    "tagFilterGroups": "Tag Filter Groups",
+    "tagFilterGroupsDesc": "These groups will filter suggestions and games out of search results",
     "appPathOverrides": "App Path Overrides",
     "appPathOverridesDesc": "Overrides the application path on the left with the one on the right when launching games.",
     "visualsHeader": "Visuals",
@@ -304,6 +306,7 @@
     "saveImportedCurations": "Save Imported Curations",
     "keepArchiveKey": "Keep Curation Archive UUID",
     "symlinkCurationContent": "Symlink Curation Content Folder (Admin prompts on Windows, Required for MAD4FP)",
+    "useTagFilters": "Use Tag Filters in Suggestions",
     "openCurationsFolder": "Curations Folder",
     "openCurationsFolderDesc": "Open the Curations folder in explorer",
     "openExportsFolder": "Exported Curations",
